FullQa New/src/objects/EMEA_Document__c.object
<CustomObject>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>64-8</fullName>
                </value>
                <value>
                    <fullName>Annexo 1</fullName>
                </value>
                <value>
                    <fullName>Control Statement</fullName>
                </value>
                <value>
                    <fullName>Copy of any correspondence with the Tax Authorities</fullName>
                </value>
                <value>
                    <fullName>Copy of Local VAT certificates</fullName>
                </value>
                <value>
                    <fullName>Copy of the registration application submitted</fullName>
                </value>
                <value>
                    <fullName>Details of Bank account(s) used for each country</fullName>
                </value>
                <value>
                    <fullName>EC Sales list/dispatches filed last year</fullName>
                </value>
                <value>
                    <fullName>HMRC Login credentials</fullName>
                </value>
                <value>
                    <fullName>Intrastat filed in last year</fullName>
                </value>
                <value>
                    <fullName>NIP-2</fullName>
                </value>
                <value>
                    <fullName>Online filing PoA</fullName>
                </value>
                <value>
                    <fullName>PoA</fullName>
                </value>
                <value>
                    <fullName>Returns filed last year</fullName>
                </value>
                <value>
                    <fullName>Trade register extract</fullName>
                </value>
                <value>
                    <fullName>UPL - 1 (online filling)</fullName>
                </value>
                <value>
                    <fullName>2x secondary proof of ID</fullName>
                </value>
                <value>
                    <fullName>Certificate confirming business activities (trade register excerpt)</fullName>
                </value>
                <value>
                    <fullName>ID/Passport of Authorized Signatory</fullName>
                </value>
                <value>
                    <fullName>Local VAT Certificate</fullName>
                </value>
                <value>
                    <fullName>Articles of Association</fullName>
                </value>
                <value>
                    <fullName>NIE Number</fullName>
                </value>
                <value>
                    <fullName>64-10</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>64-11</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>64-12</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>64-13</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>64-14</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>64-15</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>64-16</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>64-17</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Reason_Code__c</fullName>
        <label>Document Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Document_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1  Soft Copy  N/A</fullName>
                </value>
                <value>
                    <fullName>2  Soft Copy  N/A - Under Review</fullName>
                </value>
                <value>
                    <fullName>3  Soft Copy  Incorrect document</fullName>
                </value>
                <value>
                    <fullName>4  Soft Copy  Scan unclear</fullName>
                </value>
                <value>
                    <fullName>5  Soft Copy  Expired</fullName>
                </value>
                <value>
                    <fullName>6  Soft Copy  Less than 6 months validity</fullName>
                </value>
                <value>
                    <fullName>7  Soft Copy  Document not signed and less than 6 months validity</fullName>
                </value>
                <value>
                    <fullName>8  Soft Copy  Document not on headed paper</fullName>
                </value>
                <value>
                    <fullName>9  Soft Copy  Document not signed</fullName>
                </value>
                <value>
                    <fullName>10  Soft Copy  Document not on headed paper and not signed</fullName>
                </value>
                <value>
                    <fullName>11  Soft Copy  Document not notarised</fullName>
                </value>
                <value>
                    <fullName>12  Soft Copy  Document not apostilled</fullName>
                </value>
                <value>
                    <fullName>13  Soft Copy  Document not on headed paper and not notarised</fullName>
                </value>
                <value>
                    <fullName>14  Soft Copy  Document not notarised and apostilled</fullName>
                </value>
                <value>
                    <fullName>15  Soft Copy  Document not on headed paper and not apostilled</fullName>
                </value>
                <value>
                    <fullName>16  Soft Copy  Document not on headed paper, not notarised and not apostilled</fullName>
                </value>
                <value>
                    <fullName>17  Soft Copy  Other</fullName>
                </value>
                <value>
                    <fullName>18  Soft Copy  Accepted</fullName>
                </value>
                <value>
                    <fullName>19  Hard Copy  N/A</fullName>
                </value>
                <value>
                    <fullName>20  Hard Copy  N/A - Under Review</fullName>
                </value>
                <value>
                    <fullName>21  Hard Copy  Document missing in parcel</fullName>
                </value>
                <value>
                    <fullName>22  Hard Copy  Document damaged</fullName>
                </value>
                <value>
                    <fullName>23  Hard Copy  Document not on headed paper</fullName>
                </value>
                <value>
                    <fullName>24  Hard Copy  Document not signed</fullName>
                </value>
                <value>
                    <fullName>25  Hard Copy  Document not on headed paper and not signed</fullName>
                </value>
                <value>
                    <fullName>26  Hard Copy  Document not notarised</fullName>
                </value>
                <value>
                    <fullName>27  Hard Copy  Document not apostilled</fullName>
                </value>
                <value>
                    <fullName>28  Hard Copy  Document not on headed paper and not notarised</fullName>
                </value>
                <value>
                    <fullName>29  Hard Copy  Document not notarised and apostilled</fullName>
                </value>
                <value>
                    <fullName>30  Hard Copy  Document not on headed paper and not apostilled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Received__c</fullName>
        <formula>IF(

ISBLANK(TEXT(Document_Reason_Code__c)), 
False,True)</formula>
        <label>Document Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMEA_Country__c</fullName>
        <label>EMEA Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Liechtenstein</fullName>
                </value>
                <value>
                    <fullName>Lithuania</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Romania</fullName>
                </value>
                <value>
                    <fullName>Slovakia</fullName>
                </value>
                <value>
                    <fullName>Slovenia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Country_Case__c</fullName>
        <label>Registration Country Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>EMEA Documents</relationshipLabel>
        <relationshipName>EMEA_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>EMEA Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>recents_docs</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>EMEA_Country__c</columns>
        <columns>Registration_Country_Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>recents docs</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>EMEA Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMEA Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>